--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
 
-            <div class="flex-tworows">
+            <div class="flex-two">
                 <div class="flex">
                     <img src="img/slider-image-4.jpg">
                     <img src="img/slider-image-1.jpg">
