--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Slider With Arrows</title>
+    <title>Factory</title>
 </head>
 
 <body>
@@ -38,11 +38,11 @@
 
 
             <div class="flex-two">
-                <div class="flex">
-                    <img src="img/slider-image-4.jpg">
-                    <img src="img/slider-image-1.jpg">
-                    <img src="img/slider-image-2.jpg">
-                    <img src="img/slider-image-3.jpg">
+                <div class="image-wrapper-bottom">
+                    <div class="image-item"><img src="img/slider-image-4.jpg"></div>
+                    <div class="image-item"><img src="img/slider-image-1.jpg"></div>
+                    <div class="image-item"><img src="img/slider-image-2.jpg"></div>
+                    <div class="image-item"><img src="img/slider-image-3.jpg"></div>
                 </div>
                 <div>
                     <div class="arrow prev"><img src="img/arrow-gray-left.png"></div>
