--- a/index.html
+++ b/index.html
@@ -7,59 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style/index.css">
     <title>Factory</title>
 </head>
 
 <body>
     <div class="content">
-
-        <div class="left">
-            <div class="image-wrapper">
-
-
-                <div class="image-item">
-                    <img src="img/slider-image-7.jpg" alt="">
+        <div class="header">
+            <div class="header-left"></div>
+            <div class="header-right"></div>
+        </div>
+        <div class="main">
+            <div class="left-side">
+                <div class="image-wrapper">
+                    <img class="image-item" src="img/slider-image-7.jpg" alt="">
+                    <img class="image-item" src="img/slider-image-6.jpg" alt="">
+                    <img class="image-item" src="img/slider-image-9.jpg" alt="">
+                    <img class="image-item" src="img/slider-image-8.jpg" alt="">
+                    <img class="image-item" src="img/slider-image-5.jpg" alt="">
                 </div>
-                <div class="image-item">
-                    <img src="img/slider-image-6.jpg" alt="">
-                </div>
-                <div class="image-item">
-                    <img src="img/slider-image-9.jpg" alt="">
-                </div>
-                <div class="image-item">
-                    <img src="img/slider-image-8.jpg" alt="">
-                </div>
-                <div class="image-item">
-                    <img src="img/slider-image-5.jpg" alt="">
+                <div class="bottom-row">
+                    <div class="image-wrapper-bottom">
+                        <img class="image-item" src="img/slider-image-4.jpg">
+                        <img class="image-item" src="img/slider-image-1.jpg">
+                        <img class="image-item" src="img/slider-image-2.jpg">
+                        <img class="image-item" src="img/slider-image-3.jpg">
+                    </div>
+                    <div class="arrows">
+                        <button class="prev-arrow"><img src="img/arrow-gray-left.png"></button>
+                        <button class="next-arrow"><img src="img/arrow-gray-right.png"></button>
+                    </div>
                 </div>
             </div>
-
-
-            <div class="flex-two">
-                <div class="image-wrapper-bottom">
-                    <div class="image-item"><img src="img/slider-image-4.jpg"></div>
-                    <div class="image-item"><img src="img/slider-image-1.jpg"></div>
-                    <div class="image-item"><img src="img/slider-image-2.jpg"></div>
-                    <div class="image-item"><img src="img/slider-image-3.jpg"></div>
-                </div>
-                <div>
-                    <div class="arrow prev"><img src="img/arrow-gray-left.png"></div>
-                    <div class="arrow next"><img src="img/arrow-gray-right.png"></div>
+            <div class="right-side">
+                <h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit</h1>
+                <div>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                    aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit
+                    esse molestie consequat.
                 </div>
             </div>
         </div>
-
-
-        <div class="right">
-            <h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit</h1>
-            <div>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
-                ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie
-                consequat.</div>
-        </div>
-
+        <div class="footer"></div>
     </div>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
