have to fix bottom wrapper

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 </div>
                 <div class="bottom-row">
                     <div class="image-wrapper-bottom">
-                        <img class="image-item" src="img/slider-image-4.jpg">
-                        <img class="image-item" src="img/slider-image-1.jpg">
-                        <img class="image-item" src="img/slider-image-2.jpg">
-                        <img class="image-item" src="img/slider-image-3.jpg">
+                        <img class="image-item" src="img/slider-image-4.jpg" alt="">
+                        <img class="image-item" src="img/slider-image-1.jpg" alt="">
+                        <img class="image-item" src="img/slider-image-2.jpg" alt="">
+                        <img class="image-item" src="img/slider-image-3.jpg" alt="">
                     </div>
                     <div class="arrows">
                         <button class="prev-arrow"><img src="img/arrow-gray-left.png"></button>
