--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style/index.css">
+    <!--<link rel="stylesheet" href="style/index.css">-->
+    <link rel="stylesheet" href="css-dist/index.min.css">
     <title>Factory</title>
 </head>
 
@@ -20,18 +21,18 @@
         <div class="main">
             <div class="left-side">
                 <div class="image-wrapper">
-                    <img class="image-item" src="img/slider-image-7.jpg" alt="">
-                    <img class="image-item" src="img/slider-image-6.jpg" alt="">
-                    <img class="image-item" src="img/slider-image-9.jpg" alt="">
-                    <img class="image-item" src="img/slider-image-8.jpg" alt="">
-                    <img class="image-item" src="img/slider-image-5.jpg" alt="">
+                    <img src="img/slider-image-7.jpg" alt="">
+                    <img src="img/slider-image-6.jpg" alt="">
+                    <img src="img/slider-image-9.jpg" alt="">
+                    <img src="img/slider-image-8.jpg" alt="">
+                    <img src="img/slider-image-5.jpg" alt="">
                 </div>
                 <div class="bottom-row">
                     <div class="image-wrapper-bottom">
-                        <img class="image-item" src="img/slider-image-4.jpg" alt="">
-                        <img class="image-item" src="img/slider-image-1.jpg" alt="">
-                        <img class="image-item" src="img/slider-image-2.jpg" alt="">
-                        <img class="image-item" src="img/slider-image-3.jpg" alt="">
+                        <img src="img/slider-image-4.jpg" alt="">
+                        <img src="img/slider-image-1.jpg" alt="">
+                        <img src="img/slider-image-2.jpg" alt="">
+                        <img src="img/slider-image-3.jpg" alt="">
                     </div>
                     <div class="arrows">
                         <button class="prev-arrow"><img src="img/arrow-gray-left.png"></button>
@@ -49,7 +50,8 @@
         </div>
         <div class="footer"></div>
     </div>
-    <script src="script.js" defer></script>
+    <!--<script src="src/script.js" defer></script>-->
+    <script src="src/script.min.js" defer></script>
 </body>
 
 </html>
