--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <!--<link rel="stylesheet" href="style/index.css">-->
-    <link rel="stylesheet" href="css-dist/index.min.css">
+    <link rel="stylesheet" href="minified/index.min.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Factory</title>
 </head>
 
@@ -51,7 +52,7 @@
         <div class="footer"></div>
     </div>
     <!--<script src="src/script.js" defer></script>-->
-    <script src="src/script.min.js" defer></script>
+    <script src="minified/script.min.js" defer></script>
 </body>
 
 </html>
