--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    <!--<link rel="stylesheet" href="style/index.css">-->
-    <link rel="stylesheet" href="minified/index.min.css">
+    <link rel="stylesheet" href="style/index.css">
+    <!--<link rel="stylesheet" href="minified/index.min.css">-->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Factory</title>
 </head>
@@ -27,6 +27,7 @@
                     <img src="img/slider-image-9.jpg" alt="">
                     <img src="img/slider-image-8.jpg" alt="">
                     <img src="img/slider-image-5.jpg" alt="">
+                    <img src="img/slider-image-9.jpg" alt="">
                 </div>
                 <div class="bottom-row">
                     <div class="image-wrapper-bottom">
@@ -34,6 +35,7 @@
                         <img src="img/slider-image-1.jpg" alt="">
                         <img src="img/slider-image-2.jpg" alt="">
                         <img src="img/slider-image-3.jpg" alt="">
+                        <img src="img/slider-image-1.jpg" alt="">
                     </div>
                     <div class="arrows">
                         <button class="prev-arrow"><img src="img/arrow-gray-left.png"></button>
@@ -51,8 +53,8 @@
         </div>
         <div class="footer"></div>
     </div>
-    <!--<script src="src/script.js" defer></script>-->
-    <script src="minified/script.min.js" defer></script>
+    <script src="src/script.js" defer></script>
+    <!--<script src="minified/script.min.js" defer></script>-->
 </body>
 
 </html>
