--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                         <img src="img/slider-image-1.jpg" alt="">
                     </div>
                     <div class="arrows">
-                        <button class="prev-arrow"><img src="img/arrow-gray-left.png"></button>
-                        <button class="next-arrow"><img src="img/arrow-gray-right.png"></button>
+                        <button title="Scroll left" class="prev-arrow"><img src="img/arrow-gray-left.png"
+                                alt=""></button>
+                        <button title="Scroll right" class="next-arrow"><img src="img/arrow-gray-right.png"
+                                alt=""></button>
                     </div>
                 </div>
             </div>
